--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,6 +1,34 @@
-.contenedor{
-    display: flex;
-    justify-content: space-around;
-    background-color: rgb(0, 69, 87);
-    padding: "25px"
-}  
+.contenedor {
+    justify-content: end;
+    background-color: rgb(48, 48, 48);
+    display:flexbox;
+    width: 100%;
+}
+
+.home {
+    width: 5%;
+    color: black;
+    border-style:ridge;
+    position:absolute;
+    margin-top: 2.5%;
+    margin-left: 3%;
+    background-color: rgba(255, 0, 0, 0.527);
+    border-radius: 8%
+}
+
+.about {
+    position:absolute;
+    margin-top: 2.5%;
+    margin-left: 9%;
+    width: 5%;
+    color: black;
+    border-style:ridge;
+    background-color: rgba(255, 0, 0, 0.527);
+    border-radius: 8%
+}
+
+.logo {
+    position:relative;
+    width: 6%;
+    margin-left:-85%;
+}
