--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(78, 92, 0);
+  background-color: bisque;
   background-size: cover;
   -moz-background-size: cover;
   -webkit-background-size: cover;
