--- a/front/src/components/Cards/cards.module.css
+++ b/front/src/components/Cards/cards.module.css
@@ -1,7 +1,9 @@
+/* diseño de varios contenedores a la vez */
+
 .contenedor {
   display: grid;
   height: 100px;
-  grid-template-columns: repeat(5,1fr);
-  grid-template-rows: 352px;
-  grid-column-gap: 50px;
+  grid-template-columns: repeat(4,1fr);
+  grid-template-rows: 365px;
+  grid-column-gap: 10px;
 }   
