--- a/front/src/components/Detail/Detail.module.css
+++ b/front/src/components/Detail/Detail.module.css
@@ -1,10 +1,10 @@
 .botvolver {
   color: rgb(148, 2, 2);
-  position:absolute;
+  position: absolute;
   margin-top: 26%;
   margin-left: -5%;
   width: 6.5%;
-  font-family:cursive;
+  font-family: cursive;
   width: 95px;
   padding: 10px 18px;
   font-size: 16px;
@@ -12,109 +12,113 @@
   z-index: 1;
   border-radius: 24px;
 }
-  
+
 .botvolver::after,
 .botvolver::before {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    z-index: -99999;
-    transition: all .4s;
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: -99999;
+  transition: all .4s;
 }
-  
-  .botvolver::before {
-    transform: translate(0%, 0%);
-    width: 100%;
-    height: 100%;
-    background: #027402;
-    border-radius: 20px;
-  }
-  
-  .botvolver::after {
-    transform: translate(22px, 8px);
-    width: 35px;
-    height: 35px;
-    background: #09e49b42;
-    backdrop-filter: blur(5px);
-    border-radius: 50px;
-  }
-  
-  .botvolver:hover::before {
-    transform: translate(5%, 20%);
-    width: 110%;
-    height: 110%;
-  }
-  
-  .botvolver:hover::after{
-    border-radius: 10px;
-    transform: translate(0, 0);
-    width: 100%;
-    height: 100%;
-  }
-  
-  .botvolver:active::after {
-    transition: 0s;
-    transform: translate(0, 5%);
-  }
+
+.botvolver::before {
+  transform: translate(0%, 0%);
+  width: 100%;
+  height: 100%;
+  background: #c7c400;
+  border-radius: 20px;
+}
+
+.botvolver::after {
+  transform: translate(22px, 8px);
+  width: 35px;
+  height: 35px;
+  background: #eb990180;
+  backdrop-filter: blur(5px);
+  border-radius: 50px;
+}
+
+.botvolver:hover::before {
+  transform: translate(5%, 20%);
+  width: 110%;
+  height: 110%;
+}
+
+.botvolver:hover::after {
+  border-radius: 10px;
+  transform: translate(0, 0);
+  width: 100%;
+  height: 100%;
+}
+
+.botvolver:active::after {
+  transition: 0s;
+  transform: translate(0, 5%);
+}
 
 .contenedor {
-    width: 100%;
+  width:auto;
 }
 
 .nombre {
-    color:  rgb(18, 112, 18);
-    width: auto;
-    position: absolute;
-    margin-top: 30%;
-    margin-left: 4%;
-    font-family:cursive;
-    box-shadow: 12px 6px 10px #3b3a3a;
+  -webkit-text-stroke: 2px rgba(0, 0, 0, 0.87);
+  color: rgb(168, 0, 0);
+  width: auto;
+  position: absolute;
+  margin-top: 30%;
+  margin-left: 4%;
+  font-family: cursive;
 }
 
 .estatus {
-    color:  hwb(2 0% 44%);
-    position:absolute;
-    margin-top: 12%;
-    margin-left: 45%;
-    font-size:x-large;
-    font-family:cursive;
+  -webkit-text-stroke: 2px rgba(0, 0, 0, 0.87);
+  color: rgb(0, 224, 0);
+  position: absolute;
+  margin-top: 12%;
+  margin-left: 45%;
+  font-size: x-large;
+  font-family: cursive;
 }
 
 .especie {
-    color:  hwb(2 0% 44%);
-    position: absolute;
-    margin-top: 8%;
-    margin-left: 45%;
-    font-size:x-large;
-    font-family:cursive;
+  -webkit-text-stroke: 2px rgba(0, 0, 0, 0.87);
+  color: rgb(0, 224, 0);
+  position: absolute;
+  margin-top: 8%;
+  margin-left: 45%;
+  font-size: x-large;
+  font-family: cursive;
 }
 
 .gender {
-    color:  hwb(2 0% 44%);
-    position: absolute;
-    margin-top: 16%;
-    margin-left: 45%;
-    font-size:x-large;
-    font-family:cursive;
+  -webkit-text-stroke: 2px rgba(0, 0, 0, 0.87);
+  color: rgb(0, 224, 0);
+  position: absolute;
+  margin-top: 16%;
+  margin-left: 45%;
+  font-size: x-large;
+  font-family: cursive;
 }
 
 .origen {
-    color:  hwb(2 0% 44%);
-    position: absolute;
-    margin-top: 20%;
-    margin-left: 45%;
-    font-size:x-large;
-    font-family:cursive;
+  -webkit-text-stroke: 2px rgba(0, 0, 0, 0.87);
+  color: rgb(0, 224, 0);
+  position: absolute;
+  margin-top: 20%;
+  margin-left: 45%;
+  font-size: x-large;
+  font-family: cursive;
 }
 
 .img {
-    position: relative;
-    margin-left: -70%;
-    margin-top:6%;
-    border-radius: 50%;
-    width: auto;
-    box-shadow: 6px 2.5px 12px #3b3a3a;
+  position: relative;
+  margin-left: -70%;
+  margin-top: 6%;
+  border-radius: 25%;
+  width: auto;
+  box-shadow: 6px 2.5px 12px #000000;
 }
 
 .carga {}
