--- a/front/src/components/NavBar/SearchBar.module.css
+++ b/front/src/components/NavBar/SearchBar.module.css
@@ -1,40 +1,34 @@
 .inp{
     position: absolute;
-    margin-top: -4.2%;
-    margin-left: 69%; 
-    display: flex;
-    line-height: 28px;
-    align-items: center;
-    max-width: 180px; 
+    margin-top:-64px;
+    margin-left: 690px;
+    display:flex;
     height: 20px;
-    line-height: 28px;
-    padding: 0 1rem;
-    width: 100%;
-    padding-left: 1rem;
+    line-height: 1px;
     border: 2px solid transparent;
-    border-radius: 6px;
-    outline: none;
-    background-color: #caf3a8;
     color: #000000;
-    box-shadow: 0 0 5px #15ff00, 0 0 0 10px #eaee05e5;
-    transition: .3s ease;  
-}
+    width: 120px; 
+    background-color: rgba(0, 231, 39, 0.466);
+    padding:10px;
+    border-radius: 10px;
+    
+}  
+
       
 .botagregar{
 position:absolute;
 margin-top: -5%;
-margin-left: 35%;
+margin-left: 350px;
 --green: #1BFD9C;
 font-size: 15px;
-padding: 0.7em 2.7em;
-letter-spacing: 0.06em;
+padding: 0.2em 0.8em;
+letter-spacing: 0.1em;
 font-family: inherit;
-border-radius: 0.6em;
+border-radius: 0.5em;
 overflow: hidden;
 transition: all 0.3s;
-line-height: 1em;
 border: 2px solid var(--green);
-background: linear-gradient(to right, rgba(35, 255, 35, 0.212) 1%, transparent 40%,transparent 60% , rgba(27, 253, 155, 0.267) 100%);
+background: linear-gradient(to right, rgba(2, 202, 152, 0.692) 1%, transparent 25%,transparent 60% , rgba(2, 202, 152, 0.692) 100%);
 color: var(--green);
 box-shadow: inset 0 0 10px rgba(227, 252, 5, 0.4), 0 0 9px 3px rgba(27, 253, 155, 0.616);
 }   
